--- a/002-borders/main.css
+++ b/002-borders/main.css
@@ -3,7 +3,7 @@ div {
     height: 100px;
     border: 2px solid #ff1d3f;
     border-radius: 10%;
-    background-image: url("../img/balls.jpg");
+    background-image: url("../005-hoe_flexbox/balls.jpg");
     background-size: 20%;
     background-repeat: repeat;
 }
